SUBDIRS = \
	include \
	man \
	src

DIST_SUBDIRS = \
	doc \
	include \
	man \
	misc \
	src

EXTRA_DIST = \
	AUTHORS \
	BUGS \
	BUILD \
	COPYING \
	DEVINFO \
	Makefile.am \
	PORTING \
	README \
	TODO \
	autogen.sh \
	configure.ac

CLOBBER_FILES = \
	aclocal.m4 \
	config.guess \
	config.sub \
	configure \
	Makefile.in
